roles/vdm/templates/resources/openldap.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openldap
  template:
    metadata:
      labels:
        app: openldap
    spec:
      hostname: ldap-svc
      imagePullSecrets: []
      containers:
        - image: "public.ecr.aws/bitnami/openldap:2.6"
          imagePullPolicy: IfNotPresent
          name: openldap
          ports:
            - containerPort: 1389
          volumeMounts:
          - name: ldap-bootstrap-config
            mountPath: "/ldifs"
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: workload.sas.com/class
                operator: In
                values:
                - stateless
              matchFields: []
            weight: 100
          - preference:
              matchExpressions:
              - key: workload.sas.com/class
                operator: NotIn
                values:
                - compute
                - cas
                - stateful
                - connect
              matchFields: []
            weight: 50
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.azure.com/mode
                operator: NotIn
                values:
                - system
              matchFields: []
      tolerations:
      - effect: NoSchedule
        key: workload.sas.com/class
        operator: Equal
        value: stateful
      - effect: NoSchedule
        key: workload.sas.com/class
        operator: Equal
        value: stateless
      volumes:
      - name: ldap-bootstrap-config
        configMap:
          name: openldap-bootstrap-config
          items:
          - key: LDAP_USERS_CONF
            path: 07-testUsers.ldif
            mode: 0664
          - key: LDAP_GROUPS_CONF
            path: 06-testGroups.ldif
            mode: 0664
---
apiVersion: v1
kind: Service
metadata:
  name: ldap-svc
spec:
  ipFamilyPolicy: PreferDualStack
  ports:
    - port: 389
      protocol: TCP
      targetPort: 1389
      name: ldap
  selector:
    app: openldap
